--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <h2> 꿈을 향해!</h2>
     <div>
-    <img src="dream.jpg" width=70%>
+    <img src="꿈.jpg" width=70%>
     </div>
     <p>
     <h3>강민지</h3>
